--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head><meta charset="utf-8" /><script src="./pkg/bundle.js" defer></script>
+	<head><meta charset="utf-8" /><script src="/pkg/bundle.js" defer></script>
 		<title>Test</title></head>
 	<body></body>
 </html>
