--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head><meta charset="utf-8" /><script src="/pkg/bundle.js" defer></script>
-		<title>Test</title></head>
+		<title>Test</title>
+		<style>table tr:nth-child(odd) { background-color:lightgrey;}</style>
+	</head>
 	<body></body>
 </html>
