Font change to Computer Modern Serif.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,8 @@
 	<head><meta charset="utf-8" /><script src="/pkg/bundle.js" defer></script>
 		<title>Test</title>
 		<style>table tr:nth-child(odd) { background-color:lightgrey;}</style>
+		<link rel="stylesheet" href="cmun-serif.css"></link>
+<style>body {font-family: "Computer Modern Serif"}</style>
 	</head>
 	<body></body>
 </html>
