Styling and colors.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,9 @@
 <html>
 	<head><meta charset="utf-8" /><script src="/pkg/bundle.js" defer></script>
 		<title>Test</title>
-		<style>table tr:nth-child(even) { background-color:lightgrey;}</style>
+		<style>table tr:nth-child(even) { background-color:azure;}
+table tr:nth-child(odd) { background-color:floralwhite;}
+		</style>
 		<link rel="stylesheet" href="cmun-serif.css"></link>
 <style>body {font-family: "Computer Modern Serif"}</style>
 	</head>
