--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head><meta charset="utf-8" /><script src="/pkg/bundle.js" defer></script>
-		<title>Test</title>
+		<title>Case analysis</title>
 		<style>table tr:nth-child(even) { background-color:azure;}
 table tr:nth-child(odd) { background-color:floralwhite;}
 		</style>
