- Font change for buttons - Default sortering is now increasing ID.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
 table tr:nth-child(odd) { background-color:floralwhite;}
 		</style>
 		<link rel="stylesheet" href="cmun-serif.css"></link>
-<style>body {font-family: "Computer Modern Serif"}</style>
+<style>body,input,textarea,button,select {font-family: "Computer Modern Serif"}</style>
 	</head>
 	<body></body>
 </html>
