--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head><meta charset="utf-8" /><script src="/pkg/bundle.js" defer></script>
 		<title>Case analysis</title>
-		<style>.table tr:nth-child(even) { background-color:azure;}
-.table tr:nth-child(odd) { background-color:floralwhite;}
+		<style>#table tr:nth-child(even) { background-color:azure;}
+#table tr:nth-child(odd) { background-color:floralwhite;}
 		</style>
 		<link rel="stylesheet" href="cmun-serif.css"></link>
 <style>body,input,textarea,button,select {font-family: "Computer Modern Serif"}</style>
