Begin of implementation for selection limited to domain/intent.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,9 @@
 <html>
 	<head><meta charset="utf-8" /><script src="/pkg/bundle.js" defer></script>
 		<title>Case analysis</title>
-		<style>#table tr:nth-child(even) { background-color:azure;}
+		<style>
+span { margin-left:0.3em ; margin-right:0.3em }
+#table tr:nth-child(even) { background-color:azure;}
 #table tr:nth-child(odd) { background-color:floralwhite;}
 		</style>
 		<link rel="stylesheet" href="cmun-serif.css"></link>
