- Nicer scatter plots - some css styling.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
 	<head><meta charset="utf-8" /><script src="/pkg/bundle.js" defer></script>
 		<title>Case analysis</title>
 		<style>
+table {margin-left:0.2em; margin-top:1em;}
 span { margin-left:0.3em ; margin-right:0.3em }
 #table tr:nth-child(even) { background-color:azure;}
 #table tr:nth-child(odd) { background-color:floralwhite;}
@@ -10,5 +11,5 @@ span { margin-left:0.3em ; margin-right:0.3em }
 		<link rel="stylesheet" href="cmun-serif.css"></link>
 <style>body,input,textarea,button,select {font-family: "Computer Modern Serif"}</style>
 	</head>
-	<body></body>
+	<body style="padding:0.2em;"></body>
 </html>
